--- a/cs/ics/ics_pre/index.html
+++ b/cs/ics/ics_pre/index.html
@@ -1528,10 +1528,10 @@
 </div>
 <h3 id="ics">ICS理论试题选解:</h3>
 <ul>
-<li><a href="../theory/ICS-04/">第4章 程序的链接</a></li>
-<li><a href="../theory/ICS-06/">第6章 层次结构存储系统</a></li>
-<li><a href="../theory/ICS-07/">第7章 异常控制流</a></li>
-<li><a href="../theory/ICS-08/">第8章 I/O操作的实现</a></li>
+<li><a href="theory/ICS-04/">第4章 程序的链接</a></li>
+<li><a href="theory/ICS-06/">第6章 层次结构存储系统</a></li>
+<li><a href="theory/ICS-07/">第7章 异常控制流</a></li>
+<li><a href="theory/ICS-08/">第8章 I/O操作的实现</a></li>
 </ul>
 <h3 id="ics_pa">ICS_PA:</h3>
 <ul>
