add some content in ICS RISCV & rebuild

--- a/cs/ics_riscv/PA/PA0_3/index.html
+++ b/cs/ics_riscv/PA/PA0_3/index.html
@@ -2475,7 +2475,7 @@
 </code></pre></div>
 <p>这表示将程序 hello 的输出经管道输出给 Vim 作为输入，<code>vim -</code> 表示 Vim 将会读取标准输入。</p>
 <p>然后你就可以输入 <code>/hello</code> ，不断按 N/n 来上下翻动，寻找整个输入中的 hello 字符串。</p>
-<p>可以想象，如果你想把一个程序的输出复制到记事簿或者 VSCode 之类的编辑器中，再做这些操作，需要花掉比在命令行中使用 Vim 多多少的时间。这些时间足以把代码扔给 AI 让他~~直接给你生成代码答案~~深度思考帮你解释文档中的疑难点了。</p>
+<p>可以想象，如果你想把一个程序的输出复制到记事簿或者 VSCode 之类的编辑器中，再做这些操作，需要花掉比在命令行中使用 Vim 多多少的时间。这些时间足以把代码扔给 AI 让他<del>直接给你生成代码答案</del>深度思考帮你解释文档中的疑难点了。</p>
 <h2 id="vim-vscode">使用 Vim 还是 VSCode ？</h2>
 <p>在后面，你显然是需要指定一个常用的编辑器来进行大部分实验的，大部分同学会在 Vim 和 VSCode 之间选择。</p>
 <p>如果你选择 VSCode ，你需要注意的是，尽可能要做好配置，避免后续因库导入等问题，在实验过程中编辑器长期报红，既不美观，也影响你的自信心。</p>
@@ -2514,7 +2514,7 @@
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="2025年8月14日 14:04:37 CST">2025年8月14日 14:04:37</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="2025年8月15日 11:54:00 CST">2025年8月15日 11:54:00</span>
   </span>
 
     
