--- a/cs/ics_riscv/labs/index.html
+++ b/cs/ics_riscv/labs/index.html
@@ -2383,7 +2383,7 @@
 
 <h1 id="labs">Labs</h1>
 <hr />
-<p>《计算机系统基础》实验部分除了 PA，还包括几次小 lab，这几个 lab <code>并不困难</code>但需要扎实的<code>功底</code>和足够的<code>耐心</code>。</p>
+<p>《计算机系统基础》实验部分除了 PA，还包括几次小 lab，这几个 lab <strong>并不困难</strong>但需要扎实的<strong>功底</strong>和足够的<strong>耐心</strong>。</p>
 <p>从得分的角度来讲，完成 lab 的性价比是非常高的，所以建议各位都好好完成。</p>
 <p>Lab 文档的编写原则和 PA 的基本相同，相关内容可以参考 <a href="../PA/">PA 部分</a>。</p>
 
