世界是一个巨大的草台班子，转工管群也一样

--- a/auto/gp1/index.html
+++ b/auto/gp1/index.html
@@ -3554,7 +3554,7 @@
 <p>【转工管群标准化试卷】<a href="2025%E5%B9%B4%E5%B7%A5%E7%A8%8B%E7%AE%A1%E7%90%86%E5%AD%A6%E9%99%A2%E6%99%AE%E9%80%9A%E7%89%A9%E7%90%86%EF%BC%88%E4%B8%8A%EF%BC%89%E6%9C%9F%E4%B8%AD%E8%AF%95%E9%A2%98.pdf">2025年秋学期普通物理（上）期中考试试题（任课老师：奚啸翔）</a></p>
 <h2 id="_4">普通物理（下）</h2>
 <h3 id="_5">普通物理（下）期末试题</h3>
-<p>【转工管群标准化试卷】<a href="2025%E5%B9%B4%E7%8E%AF%E5%A2%83%E5%AD%A6%E9%99%A2%E6%99%AE%E9%80%9A%E7%89%A9%E7%90%86%EF%BC%88%E4%B8%8B%EF%BC%89%E6%9C%9F%E6%9C%AB%E8%AF%95%E9%A2%98.pdf">2024年秋学期普通物理（下）期中考试试题（任课老师：杜军）</a></p>
+<p>【转工管群标准化试卷】<a href="2025%E5%B9%B4%E7%8E%AF%E5%A2%83%E5%AD%A6%E9%99%A2%E6%99%AE%E9%80%9A%E7%89%A9%E7%90%86%EF%BC%88%E4%B8%8B%EF%BC%89%E6%9C%9F%E6%9C%AB%E8%AF%95%E9%A2%98.pdf">2024年秋学期普通物理（下）期末考试试题（任课老师：杜军）</a></p>
 <hr />
 <p>内容尚不完善，欢迎建议与贡献！详询转工管群ISGSNSG.</p>
 
