解决一下ICS(x86)理论的历史问题
时间过得好快

--- a/cs/ics/theory/ICS-08/index.html
+++ b/cs/ics/theory/ICS-08/index.html
@@ -3569,7 +3569,7 @@
 
 <h1 id="8">《计算机系统基础》第8章 理论习题选解</h1>
 <hr />
-<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库货联系转工管群ISGSNSG。</p>
+<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库或联系转工管群ISGSNSG。</p>
 <hr />
 <h2 id="3">第3题</h2>
 <p>（1）对于该IA-32+Linux系统中执行的用户程序P，该程序的功能是在标准输出设备上输出字符串<code>Hello, world.\n</code>。事实上，我们注意到第4题中给出了用户程序功能等价的C语言代码：
