--- a/cs/ics/theory/ICS-04/index.html
+++ b/cs/ics/theory/ICS-04/index.html
@@ -3613,7 +3613,7 @@
 
 <h1 id="4">《计算机系统基础》第4章 理论习题选解</h1>
 <hr />
-<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库货联系转工管群ISGSNSG。</p>
+<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库或联系转工管群ISGSNSG。</p>
 <hr />
 <h2 id="3">第3题</h2>
 <p>链接器在生成可执行文件时需要完成符号解析，符号解析需要使用符号表。根据《计算机系统基础》第193-194页的内容，对于某个C程序模块m，包含在符号表中的符号有三种类型：全局符号（在m中被定义，在其他模块中引用）、外部符号（其他模块定义，在m中引用）、本地符号（在m中被定义，在m中引用，包括带static属性的函数名和全局变量名）。
