--- a/cs/ics/theory/ICS-06/index.html
+++ b/cs/ics/theory/ICS-06/index.html
@@ -3657,7 +3657,7 @@
 
 <h1 id="6">《计算机系统基础》第6章 理论习题选解</h1>
 <hr />
-<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库货联系转工管群ISGSNSG。</p>
+<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库或联系转工管群ISGSNSG。</p>
 <hr />
 <h2 id="3">第3题</h2>
 <p>计算机主存的最大寻址空间为4G，按字节编址。假定用64M×8位的具有8个位平面的DRAM芯片组成容量为512MB，传输宽度为64位的内存条（主存模块）。
@@ -4041,7 +4041,7 @@ IA-32+Linux平台采用<strong>两级页表分页虚拟存储管理方式</stron
     <span class="md-icon" title="Last update">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21 13.1c-.1 0-.3.1-.4.2l-1 1 2.1 2.1 1-1c.2-.2.2-.6 0-.8l-1.3-1.3c-.1-.1-.2-.2-.4-.2m-1.9 1.8-6.1 6V23h2.1l6.1-6.1zM12.5 7v5.2l4 2.4-1 1L11 13V7zM11 21.9c-5.1-.5-9-4.8-9-9.9C2 6.5 6.5 2 12 2c5.3 0 9.6 4.1 10 9.3-.3-.1-.6-.2-1-.2s-.7.1-1 .2C19.6 7.2 16.2 4 12 4c-4.4 0-8 3.6-8 8 0 4.1 3.1 7.5 7.1 7.9l-.1.2z"/></svg>
     </span>
-    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="2025年11月19日 11:20:11 CST">2025年11月19日 11:20:11</span>
+    <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-datetime" title="2025年11月19日 11:28:16 CST">2025年11月19日 11:28:16</span>
   </span>
 
     
