--- a/cs/ics/theory/ICS-07/index.html
+++ b/cs/ics/theory/ICS-07/index.html
@@ -3504,7 +3504,7 @@
 <p>Hello, ICS2025.</p>
 <h1 id="7">《计算机系统基础》第7章 理论习题选解</h1>
 <hr />
-<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库货联系转工管群ISGSNSG。</p>
+<p>习题解答仅供参考，如有问题或获取Markdown版本，请移步github仓库或联系转工管群ISGSNSG。</p>
 <hr />
 <h2 id="3">第3题</h2>
 <p>根据《计算机系统基础》7.1.2节内容，不同进程的逻辑控制流在时间上有交错或重叠的情况称为<strong>并发</strong>，两个同时执行的进程的逻辑控制流称为<strong>并行</strong>。并行是并发执行的一个特例，并行执行的两个进程一定只能同时运行在不同的处理器或处理器的不同核上；而并发执行与处理器核数没有关系。
