--- a/cloud/index.html
+++ b/cloud/index.html
@@ -3415,6 +3415,13 @@
 
 <h1 id="_1">转工管群在线服务平台</h1>
 <p><a href="http://129.211.81.40/" title="转工管群OJ">转工管群在线评测平台</a></p>
+<p>【小游戏】<a href="https://smewin.github.io/game/snake">贪吃的疾旋鼬</a></p>
+<p>【小游戏】<a href="https://smewin.github.io/game/pushbox">推箱子</a></p>
+<p><a href="https://smewin.github.io/2025">一周年庆</a></p>
+<div class="admonition quote">
+<p class="admonition-title">Quote</p>
+<p>我欲迎风再留住几步  怎舍寒风吹动我痛处</p>
+</div>
 
 
 
